--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     ],
     "downlevelIteration": true,
     "noImplicitAny": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "typeRoots" : ["./node_modules/@types"]
   },
   "include": [
     "src/**/*"
