--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
   "jsnext:main": "dist/index.js",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "files": [
-    "dist/",
-    "ko-component-router.js"
-  ],
   "scripts": {
     "build": "taskr build",
     "watch": "taskr watch",
     "test": "taskr test",
     "test:watch": "taskr test:watch",
-    "prepublish": "yarn build"
+    "preinstall": "npm install --ignore-scripts",
+    "postinstall": "yarn build"
   },
   "keywords": [
     "knockoutjs",
@@ -74,6 +71,7 @@
     "taskr-rollup": "^0.0.3",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.5.3"
+    "typescript": "^2.5.3",
+    "yarn": "^1.13.0"
   }
 }
